--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="el">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Hello, My name is Rigas, I create websites and Eshop. I challenge myself to grow and learn something new everyday.">
-	<meta name="author" content="SvenCreations">
+	<meta name="description" content="Δημιουργώ ιστοσελίδες και Eshop. Προκαλώ τον εαυτό μου να μεγαλώσει και να μάθει κάτι νέο καθημερινά. Είμαι στον τομέα της σχεδίασης / ανάπτυξης ιστοσελίδων τα τελευταία 7 χρόνια.">
+	<meta name="author" content="Rigas Iliopoulos">
 
 	<!-- Touch icons for android and iOS (Bookmark icons) -->
 	<link rel="shortcut icon" sizes="196x196" href="images/icons/icon-196x196.png">
@@ -18,7 +18,7 @@
 
 	<!-- Schema.org markup for twitter cards(summary_large_image) -->
 
-	<title>Rigas iliopoulos Web Designer Greece</title>
+	<title>Το όνομά μου είναι Ρήγας, δημιουργώ ιστοσελίδες και Eshop.</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400">
 	<link rel="stylesheet" href="css/custom/index-animated.css">
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -36,7 +36,7 @@
 	<div class="content-wrapper">
 		<div class="v-center">
 			<div class="main-content">
-				<p>Hello, My name is Rigas, I create websites and Eshop. I challenge myself to grow and learn something new everyday. I am in the field of web design / web development for the last 7 years. Currently im working at <a href="https://www.reweb.eu" title="Web Agency in Athens" >Reweb Web Agency</a>.</p>
+				<p>Το όνομά μου είναι Ρήγας, δημιουργώ ιστοσελίδες και Eshop. Προκαλώ τον εαυτό μου να μεγαλώσει και να μάθει κάτι νέο καθημερινά. Είμαι στον τομέα της σχεδίασης / ανάπτυξης ιστοσελίδων τα τελευταία 7 χρόνια. Αυτήν τη στιγμή εργάζομαι στην <a href="https://www.reweb.gr" target="blank" title="Υπηρεσίες διαδικτύου στο Περιστέρι"> Reweb Web Agency </a>.</p>
 				<ul>
 					<li><a href="https://gr.linkedin.com/in/rigas-iliopoulos-b15104193" target="blank">Linkedin</a></li>
 					<li><a href="https://www.facebook.com/rigas.iliop" target="blank">Facebook</a></li>
